@startuml  Enemyの設計
hide empty members
' パターン１
class System
{


}

class Enemy
{
    - HP
    - ATK

}

Interface ICommand
{
    + Execution()

}

class MoveCommand
{
    + Execution()

}

class AttackCommand
{
    + Execution()

}
System o- Map
ICommand <|.. MoveCommand
ICommand <|.. AttackCommand

System <-- Enemy
System --> ICommand


@enduml